<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App name -->
    <string name="app_name">Home Assistant Plug-in for Tasker</string>

    <!-- Name of the plug-in that appears in Locale -->
    <string name="plugin_name">Home Assistant</string>

    <!-- Subtitle that appears in config activities -->
    <string name="activity_subtitle">Home Assistant - %1$s</string>

    <!-- Discard menu item -->
    <string name="menu_cancel">Cancel</string>
    <string name="add_a_server">Add a Server</string>
    <string name="delete_server">Delete Server</string>

    <string name="server_name">Server Name</string>
    <string name="base_url">Base URL</string>
    <string name="access_token">Access Token</string>
    <string name="edit_server">Edit Server</string>
    <string name="test_server">Test Server</string>
    <string name="connection_successful">Connection Successful!</string>
    <string name="connection_failed">Connection Failed :(</string>
    <string name="test_service">Test Service</string>
    <string name="service_data_hint">Service Data (JSON, optional)</string>
    <string name="call_service">Call Service</string>
    <string name="get_state">Get State</string>
    <string name="state_variable">Variable</string>
    <string name="test_entity">Test Entity</string>
    <string name="service">Service</string>
    <string name="entity_id">Entity ID</string>
    <string name="attrs_variable">Attributes (Optional)</string>
    <string name="template">Template</string>
    <string name="variable">Variable</string>
    <string name="test_template">Test Template</string>
    <string name="render_template">Render Template</string>
    <string name="select_variable">Select Variable</string>
    <string name="disable_battery_optimization">Disable Battery Optimization?</string>
    <string name="battery_optimization_dialog">
        Home Assistant Plug-In for Tasker is currently being optimized for battery. This means that
        it may be killed by the system and stop working unexpectedly.\n\nTo prevent this, it\'s
        recommended that you change the battery optimization setting for the plug-in to \'Don\'t
        Optimize\'.\n\nWould you like to go to settings to change this now?
    </string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="delete_server_warning">
        Are you sure you want to delete this server?\n\nIf it is in use by any other actions, those
        actions will stop working until they are reconfigured to use a different server!
    </string>
    <string name="yes_delete_the_server">DELETE THE SERVER!</string>

</resources>
