<?xml version="1.0" encoding="utf-8"?>
<!--
** Copyright 2019 Mark Adamson
**
** Original Author:
** Copyright 2013 two forty four a.m. LLC <http://www.twofortyfouram.com>
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at <http://www.apache.org/licenses/LICENSE-2.0>
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            layout="@layout/select_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:layout_marginTop="8dip"/>

        <AutoCompleteTextView
            android:id="@+id/atv_entity"
            android:hint="@string/entity_id_ellipsis"
            android:completionThreshold="1"
            android:singleLine="true"
            android:maxLines="1"
            android:imeOptions="flagNoExtractUi|actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:layout_marginTop="8dip"/>

        <EditText
            android:id="@+id/et_state_variable"
            android:hint="@string/state_variable"
            android:imeOptions="flagNoExtractUi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:layout_marginTop="8dip" />

        <EditText
            android:id="@+id/et_attrs_variable"
            android:hint="@string/attrs_variable"
            android:imeOptions="flagNoExtractUi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:layout_marginTop="8dip" />

        <Button
            android:id="@+id/btn_test_entity"
            android:text="@string/test_entity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:layout_marginTop="8dip"
            android:layout_gravity="end"/>

    </LinearLayout>
</ScrollView>